8203664: JFR start failure after AppCDS archive created with JFR StartFlightRecording

Disable JFR and output a warning message during CDS dump time if JFR is enabled.

Reviewed-by: jiangli, lfoltan